Regumation firefox issue fixed

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1454,6 +1454,7 @@ input:-webkit-autofill {
     vertical-align: top;
     cursor: pointer;
     position: absolute;
+    top: -14px;
     color: $white;
     font-size: $font-size-3;
     font-weight: $font-weight-medium;
